feat(ws): Notebooks V2 GET /api/v1/workspacekinds Backend API supports sorting #336
